<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">

    <string name="app_name">MyMoneyManager</string>
    <string name="my_money_manager">My Money Manager</string>

    <string name="test_string">Тест</string>
    <string name="to_date">К дате:</string>
    <string name="from_date">С даты:</string>
    <string name="total">Общее количество</string>
    <string name="chart_slide">Слайд-чарт, чтобы увидеть больше!</string>
    <string name="daily_expense_limit">Дневной лимит транзакций</string>
    <string name="monthly_expense_limit">Ежемесячный лимит транзакций</string>
    <string name="yearly_expense_limit">Годовой лимит транзакций</string>
    <string name="show_notification">Показать уведомление</string>
    <string name="language">Язык</string>
    <string-array name="dropdown_string_array">
        <item>Ежедневно</item>
        <item>Ежемесячно</item>
        <item>Ежегодный</item>
        <item>Кастом</item>
    </string-array>
    <string-array name="dropdown_income_expense">
        <item>Доход</item>
        <item>Расходы</item>
    </string-array>
    <string-array name="language_array">
        <item>Английский</item>
        <item>Французский</item>
    </string-array>
    <string name="save">Сохранить</string>
    <string name="hint_spend_reason">напиши на что ты потратил</string>
    <string name="hint_amount">сумма</string>
    <string name="update">Обновить</string>
    <string name="plus_income">+ Доход</string>
    <string name="minus_expense">- Расходы</string>
    <string name="income">Доход</string>
    <string name="expense">Расходы</string>
    <string name="monthly_income_and_expense">Ежемесячные доходы и расходы</string>
    <string name="this_month">Этот месяц</string>
    <string name="daily_expenses">Ежедневные расходы</string>
    <string name="today">Сегодня</string>
    <string name="todays_expenses">Сегодняшние расходы</string>
    <string name="todays_income">Сегодняшний доход</string>
    <string name="recent_transactions">Недавние транзакции</string>
    <string name="balance">Баланс</string>
    <string name="select_a_type">Выберите тип</string>
    <string name="select_a_category">Выбрать категорию</string>
    <string name="tap_to_chane_type">нажмите, чтобы изменить тип</string>
    <string name="no_income">Нет дохода</string>
    <string name="no_expense">Нет расходов</string>
    <string name="daily">Ежедневно</string>
    <string name="monthly">Ежемесячно</string>
    <string name="yearly">Ежегодный</string>
    <string name="custom">Кастом</string>
    <string name="change">Изменить</string>
    <string name="imprt_export_database" translatable="false">Импорт и экспорт базы данных</string>
    <string name="see_more_transactions">Посмотреть больше транзакций >></string>
    <string name="see_other_days">Смотрите другие дни >></string>
    <string name="see_other_months">Смотрите другие месяцы >></string>
    <string name="memo_left">"меморандум: "</string>
    <string name="category_left">"категория: "</string>
    <string name="type_left">"тип: "</string>
    <string name="no_transactions">Нет транзакций</string>
    <string name="category_name">Название категории</string>
    <string name="done">Выполнено</string>
    <string name="select_category">Выбрать категорию</string>
    <string name="category_already_exists">Категория уже существует</string>
    <string name="update_category">Обновить категорию</string>
    <string name="add_category">Добавить категорию</string>
    <string name="type">тип</string>
    <string name="memo">меморандум</string>
    <string name="category">категория</string>
    <string name="add_transaction">Добавить транзакцию</string>
    <string name="add_income">Добавить доход</string>
    <string name="add_expense">Добавить расходы</string>
    <string name="setting">настройка</string>

    <string name="textview">TextView</string>
    <string name="select_file_import">Выберите файл для импорта</string>
    <string name="import_txt">Импорт</string>
    <string name="export_txt">Экспорт</string>

    <string name="zero_char">0</string>
    <string name="five_hungred">500</string>
    <string name="hungred_twenty">120</string>
    <string name="thirteen_tx">30</string>
    <string name="date_example">Янв 19</string>
    <string name="twenty">20</string>
    <string name="add_category_txt">Добавить категорию</string>
    <string name="cancel">Отмена</string>
    <string name="sample">образец</string>
    <string name="you_can_change_this_later">Вы можете изменить это позже</string>
    <string name="please_select_language">Пожалуйста, выберите язык</string>
    <string name="english">Английский</string>
    <string name="france">Французский</string>
    <string name="import_or_export_database">Импорт или экспорт базы данных</string>
</resources>
