<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="22dp"
        android:paddingTop="12dp"
        android:paddingRight="22dp"
        android:paddingBottom="12dp">

        <TextView
            android:id="@+id/tvDialogTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_category_txt"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="21sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height=".5dp"
            android:layout_marginLeft="12dp"
            android:layout_marginTop="6dp"
            android:layout_marginRight="12dp"
            android:layout_marginBottom="6dp"
            android:background="@color/medium_gray"
            android:orientation="vertical"></LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="46dp">

            <EditText
                android:id="@+id/etCategoryName"
                android:layout_width="match_parent"
                android:layout_height="46dp"
                android:background="@drawable/dialog_add_category_back"
                android:ems="10"
                android:hint="@string/category_name"
                android:inputType="textPersonName"
                android:paddingLeft="12dp"
                android:paddingRight="120dp"
                android:textSize="15sp" />

            <Button
                android:id="@+id/btnSave"
                android:layout_width="wrap_content"
                android:layout_height="46dp"
                android:layout_alignParentRight="true"
                android:background="@color/myColorPrimaryDark"
                android:text="@string/save"
                android:textColor="@color/white"
                android:textSize="15sp" />
        </RelativeLayout>

        <TextView
            android:id="@+id/tvErrorMessage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="12dp"
            android:textColor="@android:color/holo_red_dark"
            android:textSize="11sp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:visibility="gone">

            <Button
                android:id="@+id/btnCancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="false"
                android:background="@color/white"
                android:text="@string/cancel"
                android:textSize="12sp" />

        </RelativeLayout>
    </LinearLayout>
</RelativeLayout>
