<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical">


    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        android:background="@drawable/card_back_with_border_red"
        app:cardElevation="2dp">

        <LinearLayout
            android:id="@+id/llBorderColor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="12dp">


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingLeft="12dp"
                android:paddingRight="12dp">

                <TextView
                    android:id="@+id/tvValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/test_string"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="19sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height=".5dp"
                android:background="@color/medium_gray"
                android:orientation="vertical"></LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:paddingStart="12dp"
                android:paddingEnd="12dp">

                <TextView
                    android:id="@+id/tvCategoryLabel"
                    android:layout_width="52dp"
                    android:layout_height="wrap_content"
                    android:text="@string/category_left"
                    android:textAlignment="viewStart"
                    android:textSize="11sp" />

                <TextView
                    android:id="@+id/tvCategoyName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/textview"
                    android:textAlignment="center"
                    android:textSize="11sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:paddingStart="12dp"
                android:paddingEnd="12dp">

                <TextView
                    android:id="@+id/tvNameLabel"
                    android:layout_width="52dp"
                    android:layout_height="wrap_content"
                    android:text="@string/memo_left"
                    android:textAlignment="viewStart"
                    android:textSize="11sp" />

                <TextView
                    android:id="@+id/tvName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/textview"
                    android:textSize="11sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:paddingStart="12dp"
                android:paddingEnd="12dp">

                <TextView
                    android:id="@+id/tvTypeLabel"
                    android:layout_width="52dp"
                    android:layout_height="wrap_content"
                    android:text="@string/type_left"
                    android:textAlignment="viewStart"
                    android:textSize="11sp" />

                <TextView
                    android:id="@+id/tvType"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/textview"
                    android:textSize="11sp" />
            </LinearLayout>

        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>