<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/allContainer"
    android:layout_width="wrap_content"
    android:layout_height="241dp"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/incomeBack"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="bottom"
        android:orientation="vertical">

        <androidx.coordinatorlayout.widget.CoordinatorLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/incomeBack2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="bottom"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvIncomeAmount"
                    android:layout_width="match_parent"
                    android:layout_height="12dp"
                    android:text="@string/thirteen_tx"
                    android:textAlignment="center"
                    android:textSize="9sp" />


                <LinearLayout
                    android:id="@+id/income"
                    android:layout_width="42dp"
                    android:layout_height="32dp"
                    android:layout_marginLeft="12dp"
                    android:layout_marginRight="12dp"
                    android:background="@color/myColorPrimary"
                    android:orientation="horizontal"></LinearLayout>
            </LinearLayout>

            <TextView
                android:id="@+id/tvDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:lineSpacingExtra="9sp"
                android:text="@string/date_example"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="9sp" />

        </androidx.coordinatorlayout.widget.CoordinatorLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/black"
        android:orientation="vertical"></LinearLayout>

    <LinearLayout
        android:id="@+id/expenseBack"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="top"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/expense"
            android:layout_width="match_parent"
            android:layout_height="22dp"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:background="@color/bar_bottom"
            android:orientation="horizontal"></LinearLayout>

        <TextView
            android:id="@+id/tvExpenseAmount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/twenty"
            android:textAlignment="center"
            android:textSize="9sp" />

    </LinearLayout>
</LinearLayout>