<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/card_background_verylight"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/layoutUpper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="visible">

            <RelativeLayout
                android:id="@+id/layoutTotal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_margin="6dp"
                android:background="@color/myColorPrimaryDark"
                android:elevation="12dp"
                android:orientation="horizontal"
                android:padding="2dp">

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardElevation="0dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:padding="6dp">

                        <TextView
                            android:id="@+id/textView4"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/total"
                            android:textAlignment="center"
                            android:textColor="@color/black" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:layout_marginLeft="84dp"
                            android:layout_marginTop="6dp"
                            android:layout_marginRight="84dp"
                            android:layout_marginBottom="6dp"
                            android:background="@color/medium_gray"
                            android:orientation="vertical"></LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:orientation="vertical">

                                <TextView
                                    android:id="@+id/textView8"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="1"
                                    android:text="@string/income"
                                    android:textAlignment="center"
                                    android:textSize="11sp" />

                                <TextView
                                    android:id="@+id/tvIncomeTotal"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="1"
                                    android:background="@color/white"
                                    android:text="@string/sample"
                                    android:textAlignment="center"
                                    android:textColor="@color/black"
                                    android:textSize="21sp" />
                            </LinearLayout>

                            <LinearLayout
                                android:layout_width=".5dp"
                                android:layout_height="match_parent"
                                android:layout_marginTop="12dp"
                                android:layout_marginBottom="12dp"
                                android:background="@color/black"
                                android:orientation="horizontal"></LinearLayout>

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_weight="1"
                                android:orientation="vertical">

                                <TextView
                                    android:id="@+id/textView9"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="1"
                                    android:text="@string/expense"
                                    android:textAlignment="center"
                                    android:textSize="11sp" />

                                <TextView
                                    android:id="@+id/tvExpenseTotal"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="1"
                                    android:background="@color/white"
                                    android:text="@string/sample"
                                    android:textAlignment="center"
                                    android:textColor="@color/black"
                                    android:textSize="21sp" />
                            </LinearLayout>

                            <LinearLayout
                                android:layout_width=".5dp"
                                android:layout_height="match_parent"
                                android:layout_marginTop="12dp"
                                android:layout_marginBottom="12dp"
                                android:background="@color/black"
                                android:orientation="horizontal">

                            </LinearLayout>

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_weight="1"
                                android:orientation="vertical">

                                <TextView
                                    android:id="@+id/textView10"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="1"
                                    android:text="@string/balance"
                                    android:textAlignment="center"
                                    android:textSize="11sp" />

                                <TextView
                                    android:id="@+id/tvBalanceTotal"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="1"
                                    android:background="@color/white"
                                    android:text="@string/sample"
                                    android:textAlignment="center"
                                    android:textColor="@color/black"
                                    android:textSize="21sp" />
                            </LinearLayout>

                        </LinearLayout>
                    </LinearLayout>

                </androidx.cardview.widget.CardView>


            </RelativeLayout>
        </LinearLayout>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="2dp"
            app:cardCornerRadius="6dp">

            <FrameLayout
                android:id="@+id/flListFrrame"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:transitionName="showList"
                tools:layout_editor_absoluteX="8dp"
                tools:layout_editor_absoluteY="8dp">

                <ExpandableListView
                    android:id="@+id/expandableExpenseList"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:divider="@android:color/background_light"
                    android:dividerHeight="6dp"
                    android:elevation="6dp"
                    android:groupIndicator="@color/transparent"></ExpandableListView>

            </FrameLayout>

            <LinearLayout
                android:id="@+id/layoutLower"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:visibility="visible">

                <TextView
                    android:id="@+id/tvMessage"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/no_transactions"
                    android:visibility="visible" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_weight="1"
            android:background="@color/light_gray"
            android:orientation="vertical"></LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:elevation="6dp"
                app:cardElevation="0dp">

                <RelativeLayout
                    android:id="@+id/layoutDates"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:visibility="visible">


                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_marginLeft="12dp"
                        android:clipToPadding="false"
                        android:orientation="horizontal"
                        android:padding="6dp">

                        <TextView
                            android:id="@+id/tvStartDateLabel"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"

                            android:layout_alignParentLeft="true"
                            android:layout_marginRight="12dp"
                            android:layout_weight="1"
                            android:paddingLeft="0dp"
                            android:paddingTop="12dp"
                            android:paddingRight="0dp"
                            android:paddingBottom="12dp"
                            android:text="@string/to_date" />

                        <TextView
                            android:id="@+id/tvStartDate"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_alignParentLeft="true"
                            android:layout_weight="1"
                            android:background="@color/white"
                            android:elevation="0dp"
                            android:padding="12dp"
                            android:text="@string/textview"
                            android:textColor="@color/black" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_marginRight="12dp"
                        android:clipToPadding="false"
                        android:orientation="horizontal"
                        android:padding="6dp">

                        <TextView
                            android:id="@+id/tvEndDateLabel"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentLeft="true"
                            android:layout_marginRight="12dp"
                            android:layout_weight="1"
                            android:paddingLeft="0dp"
                            android:paddingTop="12dp"
                            android:paddingRight="0dp"
                            android:paddingBottom="12dp"
                            android:text="@string/from_date" />

                        <TextView
                            android:id="@+id/tvEndDate"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentRight="true"
                            android:layout_weight="1"
                            android:background="@color/white"
                            android:elevation="0dp"
                            android:padding="12dp"
                            android:text="@string/textview"
                            android:textColor="@color/black" />
                    </LinearLayout>


                </RelativeLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_weight="1"
            android:background="@color/light_gray"
            android:orientation="vertical"></LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:background="@color/white"
            android:orientation="horizontal">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:paddingLeft="6dp"
                android:paddingRight="0dp">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rvCategoryFilterList"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                </androidx.recyclerview.widget.RecyclerView>

            </FrameLayout>

            <Button
                android:id="@+id/btnSelectFilterCategory"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:fontFamily="sans-serif-medium"
                android:paddingLeft="12dp"
                android:paddingRight="18dp"
                android:text="@string/change"
                android:textAllCaps="false"
                android:textColor="@color/dark_gray"
                android:textSize="15sp" />

        </LinearLayout>

    </LinearLayout>
</LinearLayout>